--- a/login.html
+++ b/login.html
@@ -19,6 +19,8 @@
 	</head>
 	<body>
 
+		<h1>EduSecurity</h1>
+
 		<div class="container">
 			<h2>Вход</h2>
 			<div class="form">
@@ -26,28 +28,12 @@
 			    	<label class="form-label">Имя:</label>
 			    	<input type="text" class="form-control" id="login" placeholder="Введите имя" required>
 			  	</div>
-			  	<!-- <div class="mb-3">
-			    	<label class="form-label">Фамилия</label>
-			    	<input type="text" class="form-control" id="login" required>
-			  	</div>
-			  	<div class="mb-3">
-			    	<label class="form-label">Телефон</label>
-			    	<input type="text" class="form-control" id="phone" required>
-			  	</div>
-			  	<div class="mb-3">
-			    	<label class="form-label">Почта</label>
-			    	<input type="text" class="form-control" id="mail" required>
-			  	</div>
-			  	<div class="mb-3">
-			    	<label class="form-label">Загрузите ваше фото</label>
-			    	<input type="file" class="upload" id="photo-upload"/>
-			  	</div> -->
 			  	<div class="mb-3">
 			    	<label class="form-label">Пароль:</label>
 			    	<input type="password" class="form-control" id="password" placeholder="Введите пароль" required>
 			  	</div>
 			  	<div class="button">
-			  		<button type="button" class="btn btn-dark" id="btn">Готово</button>
+			  		<button type="button" class="btn btn-dark" id="login">Войти</button>
 			  		<br/>
 			  		<a href="#" class="form-label reg">Зарегистрироваться</a>
 			  	</div>
