--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en" dir = "ltr">
 	<head>
 		<meta charset = "UTF-8">
-		<title>Doc</title>
+		<title>EduSecurity</title>
 
 		<!--Bootstrap-->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,25 +15,58 @@
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
 	    <link rel = "stylesheet" type = "text/css" href = "styles/index.css"/>
+	    <link rel = "stylesheet" type = "text/css" href = "styles/menu.css"/>
 
 	</head>
 	<body>
 
+		<h1 class="logo">EduSecurity</h1>
+
+		<div class="container">
+			
+			<h1 class="pageName">Профиль</h1>
+
+			<div class="row data_container">
+				<div class="col-6">
+					<ion-icon name="person-circle-outline" class="photo" item-right></ion-icon>
+				</div>
+
+				<div class="col-6 data">
+					<p>Фамилия Имя Отчество</p>
+					<a href="tel:89999999999">89999999999</a>
+					<br/>
+					<a href="mailto:example@gmail.com">example@gmail.com</a>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-6">
+					<button type="button" class="btn btn-secondary" id="edit">Редактировать</button>
+				</div>
+
+				<div class="col-6">
+					<button type="button" class="btn btn-purple" id="children">Дети</button>
+					<button type="button" class="btn btn-purple" id="parents">Допуск</button>
+				</div>
+			</div>
+
+		</div>
+
 		<div class="container menu">
 		  	
-		  	<div class="col-4">
+		  	<div class="col-4 menu_elem">
 		  		<a href="#" class="menu_element active">Профиль</a>
 		  		<a href="#" class="menu_element_img active"><ion-icon name="person-circle-outline"></ion-icon></a>
 		  	</div>
 
-		  	<div class="col-4">
-		  		<a href="#" class="menu_element">Что-то</a>
-		  		<a href="#" class="menu_element_img active"><ion-icon name="person-circle-outline"></ion-icon></a>
+		  	<div class="col-4 menu_elem">
+		  		<a href="#" class="menu_element">Панель</a>
+		  		<a href="#" class="menu_element_img"><ion-icon name="server-outline"></ion-icon></a>
 		  	</div>
 
-		  	<div class="col-4">
+		  	<div class="col-4 menu_elem">
 		  		<a href="#" class="menu_element">История</a>
-		  		<a href="#" class="menu_element_img active"><ion-icon name="person-circle-outline"></ion-icon></a>
+		  		<a href="#" class="menu_element_img"><ion-icon name="list-outline"></ion-icon></a>
 		  	</div>
 
 		</div>
