--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
-	    <link rel = "stylesheet" type = "text/css" href = "styles/index.css"/>
+	    <link rel = "stylesheet" type = "text/css" href = "styles/profile.css"/>
 	    <link rel = "stylesheet" type = "text/css" href = "styles/menu.css"/>
 
 	</head>
