--- a/login.html
+++ b/login.html
@@ -25,8 +25,8 @@
 			<h2>Вход</h2>
 			<div class="form">
 			  	<div class="mb-3 name">
-			    	<label class="form-label">Имя:</label>
-			    	<input type="text" class="form-control" id="login" placeholder="Введите имя" required>
+			    	<label class="form-label">Логин:</label>
+			    	<input type="text" class="form-control" id="login" placeholder="Введите логин" required>
 			  	</div>
 			  	<div class="mb-3">
 			    	<label class="form-label">Пароль:</label>
