--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,8 @@
 
 			<div class="row data_container">
 				<div class="col-6">
-					<ion-icon name="person-circle-outline" class="photo" item-right></ion-icon>
+					<img src="img/photo.png" class="photo">
+					<button type="button" class="btn btn-secondary" id="edit">Редактировать</button>
 				</div>
 
 				<div class="col-6 data">
@@ -37,15 +38,7 @@
 					<a href="tel:89999999999">89999999999</a>
 					<br/>
 					<a href="mailto:example@gmail.com">example@gmail.com</a>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-6">
-					<button type="button" class="btn btn-secondary" id="edit">Редактировать</button>
-				</div>
-
-				<div class="col-6">
+					<br/>
 					<button type="button" class="btn btn-purple" id="children">Дети</button>
 					<button type="button" class="btn btn-purple" id="parents">Допуск</button>
 				</div>
