try fix problems

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang = "en" dir = "ltr">
 	<head>
 		<meta charset = "UTF-8">
-		<title>EduSecurity</title>
+		<title>Безопасное образование</title>
 
 		<!--Bootstrap-->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
