--- a/app_user/static/login.html
+++ b/app_user/static/login.html
@@ -2,7 +2,7 @@
 <html lang = "en" dir = "ltr">
 	<head>
 		<meta charset = "UTF-8">
-		<title>EduSecurity</title>
+		<title>Безопасное образование</title>
 
 		<!--Bootstrap-->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,19 +19,21 @@
 	</head>
 	<body>
 
+		<h1>EduSecurity</h1>
+
 		<div class="container">
 			<h2>Вход</h2>
 			<div class="form">
 			  	<div class="mb-3 name">
-			    	<label class="form-label">Имя:</label>
-			    	<input type="text" class="form-control" id="login" placeholder="Введите имя" required>
+			    	<label class="form-label">Логин:</label>
+			    	<input type="text" class="form-control" id="login" placeholder="Введите логин" required>
 			  	</div>
 			  	<div class="mb-3">
 			    	<label class="form-label">Пароль:</label>
 			    	<input type="password" class="form-control" id="password" placeholder="Введите пароль" required>
 			  	</div>
 			  	<div class="button">
-			  		<button type="button" class="btn btn-dark" id="btn">Готово</button>
+			  		<button type="button" class="btn btn-dark" id="login">Войти</button>
 			  		<br/>
 			  		<a href="#" class="form-label reg">Зарегистрироваться</a>
 			  	</div>
