--- a/app_user/static/profile.html
+++ b/app_user/static/profile.html
@@ -2,7 +2,7 @@
 <html lang = "en" dir = "ltr">
 	<head>
 		<meta charset = "UTF-8">
-		<title>EduSecurity</title>
+		<title>Боброзование</title>
 		<link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
 
 		<!--Bootstrap-->
@@ -21,19 +21,19 @@
 	</head>
 	<body>
 
-		<h1 class="logo">EduSecurity</h1>
+		<h1 class="logo">Боброзование</h1>
 
 		<div class="container">
 			
 			<h1 class="pageName">Профиль</h1>
 
 			<div class="row data_container">
-				<div class="col-6">
+				<div class="col-lg-6 col-md-12" id="first_block">
 					<img src="img/photo.png" class="photo">
 					<button type="button" class="btn btn-secondary" id="edit">Редактировать</button>
 				</div>
 
-				<div class="col-6 data">
+				<div class="col-lg-6 col-sm-12 data" id="second_block">
 					<p>Фамилия Имя Отчество</p>
 					<a href="tel:89999999999">89999999999</a>
 					<br/>
@@ -67,5 +67,6 @@
 
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 	</body>
 </html>
