--- a/app_user/static/login.html
+++ b/app_user/static/login.html
@@ -2,7 +2,8 @@
 <html lang = "en" dir = "ltr">
 	<head>
 		<meta charset = "UTF-8">
-		<title>Безопасное образование</title>
+		<title>EduSecurity</title>
+		<link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
 
 		<!--Bootstrap-->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -28,12 +29,16 @@
 			    	<label class="form-label">Логин:</label>
 			    	<input type="text" class="form-control" id="login" placeholder="Введите логин" required>
 			  	</div>
+			  	<!-- <div class="mb-3">
+			    	<label class="form-label">Загрузите ваше фото</label>
+			    	<input type="file" class="upload" id="photo-upload"/>
+			  	</div> -->
 			  	<div class="mb-3">
 			    	<label class="form-label">Пароль:</label>
 			    	<input type="password" class="form-control" id="password" placeholder="Введите пароль" required>
 			  	</div>
 			  	<div class="button">
-			  		<button type="button" class="btn btn-dark" id="login">Войти</button>
+			  		<button type="button" class="btn btn-dark" id="btn">Войти</button>
 			  		<br/>
 			  		<a href="#" class="form-label reg">Зарегистрироваться</a>
 			  	</div>
