--- a/app_user/static/profile.html
+++ b/app_user/static/profile.html
@@ -4,6 +4,7 @@
 		<meta charset = "UTF-8">
 		<title>Бобразование</title>
 		<link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!--Bootstrap-->
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
