--- a/app_user/static/allow_list.html
+++ b/app_user/static/allow_list.html
@@ -2,7 +2,7 @@
 <html lang = "en" dir = "ltr">
 	<head>
 		<meta charset = "UTF-8">
-		<title>EduSecurity</title>
+		<title>Бобразование</title>
 		<link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 
-		<h1 class="logo">EduSecurity</h1>
+		<h1 class="logo">Бобразование</h1>
 
 		<div class="container">
 			
