--- a/app_user/static/registration.html
+++ b/app_user/static/registration.html
@@ -2,7 +2,7 @@
 <html lang = "en" dir = "ltr">
 	<head>
 		<meta charset = "UTF-8">
-		<title>EduSecurity</title>
+		<title>Бобразование</title>
 		<link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
