--- a/app_user/static/profile.html
+++ b/app_user/static/profile.html
@@ -2,7 +2,7 @@
 <html lang = "en" dir = "ltr">
 	<head>
 		<meta charset = "UTF-8">
-		<title>Бобразование</title>
+		<title>Боброзование</title>
 		<link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 
-		<h1 class="logo">Бобразование</h1>
+		<h1 class="logo">Боброзование</h1>
 
 		<div class="container">
 			
@@ -36,9 +36,9 @@
 
 				<div class="col-lg-6 col-sm-12 data" id="second_block">
 					<p>Фамилия Имя Отчество</p>
-					<a href="tel:89999999999">89999999999</a>
+					<a href="tel:89184898848"><ion-icon name="call-outline" class="icons"></ion-icon> 89184898848</a>
 					<br/>
-					<a href="mailto:example@gmail.com">example@gmail.com</a>
+					<a href="mailto:example@gmail.com"><ion-icon name="at-outline" class="icons"></ion-icon> example@gmail.com</a>
 					<br/>
 					<button type="button" class="btn btn-purple" id="children">Дети</button>
 					<button type="button" class="btn btn-purple" id="parents">Допуск</button>
