--- a/app_user/static/profile_child.html
+++ b/app_user/static/profile_child.html
@@ -42,6 +42,8 @@
 					<a href="mailto:example@gmail.com"><ion-icon name="at-outline" class="icons"></ion-icon> example@gmail.com</a>
 					<br/>
 					<a href="mailto:example@gmail.com"><ion-icon name="school-outline"></ion-icon> МБОУ №4, 9В</a>
+					<br/><br/>
+					<p class="status_true">В школе</p>
 				</div>
 			</div>
 			
