changes in profile

--- a/app_user/static/profile.html
+++ b/app_user/static/profile.html
@@ -41,7 +41,7 @@
 					<a href="mailto:example@gmail.com"><ion-icon name="at-outline" class="icons"></ion-icon> example@gmail.com</a>
 					<br/>
 					<button type="button" class="btn btn-purple" id="children">Дети</button>
-					<button type="button" class="btn btn-purple" id="parents">Допуск</button>
+					<button type="button" class="btn btn-purple" id="parents">Доверенные</button>
 				</div>
 			</div>
 
