--- a/app_user/static/profile_allow.html
+++ b/app_user/static/profile_allow.html
@@ -26,7 +26,7 @@
 
 		<div class="container">
 			
-			<h1 class="pageName">Допуск</h1>
+			<h1 class="pageName">Доверенные</h1>
 
 			<div class="row data_container">
 				<div class="col-lg-6 col-md-12" id="first_block">
