--- a/app_user/static/profile.html
+++ b/app_user/static/profile.html
@@ -31,7 +31,7 @@
 			<div class="row data_container">
 				<div class="col-lg-6 col-md-12" id="first_block">
 					<img src="img/photo.png" class="photo">
-					<button type="button" class="btn btn-secondary" id="edit">Редактировать</button>
+					<a href=""><button type="button" class="btn btn-secondary" id="edit">Редактировать</button></a>
 				</div>
 
 				<div class="col-lg-6 col-sm-12 data" id="second_block">
@@ -40,8 +40,8 @@
 					<br/>
 					<a href="mailto:example@gmail.com"><ion-icon name="at-outline" class="icons"></ion-icon> example@gmail.com</a>
 					<br/>
-					<button type="button" class="btn btn-purple" id="children">Дети</button>
-					<button type="button" class="btn btn-purple" id="parents">Доверенные</button>
+					<a href=""><button type="button" class="btn btn-purple" id="children">Дети</button></a>
+					<a href=""><button type="button" class="btn btn-purple" id="parents">Доверенные</button></a>
 				</div>
 			</div>
 
