some changes in edit

--- a/app_user/static/edit_child.html
+++ b/app_user/static/edit_child.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset = "UTF-8">
 		<title>Бобразование</title>
-		<link href="img/logo_img.png" rel="shortcut icon" type="images/x-icon">
+
+		{% load static %}
+		<link href="{% static 'img/login_img.png' %}" rel="shortcut icon" type="images/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!--Bootstrap-->
@@ -16,8 +18,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
-	    <link rel = "stylesheet" type = "text/css" href = "styles/edit.css"/>
-	    <link rel = "stylesheet" type = "text/css" href = "styles/menu.css"/>
+		<link rel = "stylesheet" type = "text/css" href = "{% static 'styles/edit.css' %}"/>
+		<link rel = "stylesheet" type = "text/css" href = "{% static 'styles/menu.css' %}"/>
 
 	</head>
 	<body>
